# gc-authen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  adder_32bit.txt  authentation.cpp  desengine.cpp  desengine.h  garbled_adder_32bit.txt  garbling-scheme.cpp  garbling_huyen.cpp  sort.txt  sort_file.h  test.py  test_garbling-scheme  test_garbling-scheme.cpp
test/: gen_circuit.cpp
